[package]
name = "elsa"
version = "1.10.0"
authors = ["Manish Goregaokar <manishsmail@gmail.com>"]
edition = "2018"
description = "Append-only collections for Rust where borrows to entries can outlive insertions"
license = "MIT/Apache-2.0"
documentation = "https://docs.rs/elsa/"
repository = "https://github.com/manishearth/elsa"
keywords = ["data-structure", "map", "frozen", "cache", "arena"]
categories = ["data-structures", "caching"]

[dependencies]
stable_deref_trait = "1.1.1"
serde = { version = "1.0.171", features = ["derive"], optional = true }
indexmap = { version = "2.0.2", optional = true }

[package.metadata.docs.rs]
features = ["indexmap"]

[[example]]
name = "string_interner"
path = "examples/string_interner.rs"
required-features = ["indexmap"]

[dev-dependencies]
serde_json = "1.0.104"

[features]
default = []
serde = ["dep:serde", "indexmap/serde"]
indexmap = ["dep:indexmap"]
